--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -518,7 +518,9 @@
       <a href="#" class="nav-link">Browse Jobs</a>
       <a href="#" class="nav-link">Companies</a>
       <a href="#" class="nav-link">Communities</a>
-      <a href="#" class="nav-link">Assessments</a>
+      <a href="/assessment/createAssessment" class="nav-link">Assessments</a>
+
+
       
       <!-- Dynamic authentication links -->
       <div sec:authorize="isAnonymous()">
@@ -714,8 +716,8 @@
             </div>
           </div>
           
-          <a href="#" class="btn btn-primary">Explore Tests</a>
-          <a href="#" class="btn btn-outline" style="margin-left: 1rem;">Create Company Test</a>
+          <a th:href="@{/assessment/takeAssessment?title=Java}" class="btn btn-primary">Explore Tests</a>
+          <a th:href="@{/assessment/createAssessment}" class="btn btn-outline" style="margin-left: 1rem;">Create Company Test</a>
         </div>
         <div class="assessment-image">
           <img src="/api/placeholder/350/250" alt="Skill assessment illustration">
