--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -517,7 +517,7 @@
     <div class="nav-links">
       <a href="#" class="nav-link">Browse Jobs</a>
       <a href="#" class="nav-link">Companies</a>
-      <a href="#" class="nav-link">Communities</a>
+      <a href="/communities" class="nav-link">Communities</a>
       <a href="/assessment/createAssessment" class="nav-link">Assessments</a>
 
 
